--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -406,7 +406,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - detect-custom-properties:
-        description: 'Detect app, language, and build profile environment variables from repository custom properties'
+        # 'Detect app, language, and build profile environment variables from repository custom properties'
         # GH API returns something like [{"property_name":"GABuildLanguage","value":"go"},{"property_name":"GABuildProfile","value":"cli"},{"property_name":"primaryApplication","value":"chef-360"}]'
         run: |
           response=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${{ github.repository }}/properties/values) 
@@ -427,7 +427,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           
       - generate-filename-slug:
-        description: Generate a simple slug based on repo and date for use in any output artifacts
+        # description: Generate a simple slug based on repo and date for use in any output artifacts
         runs-on: ubuntu-latest
         steps:
         - run: |
