--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -174,7 +174,7 @@ jobs:
 # Blackduck SBOM is at SERVER: https://progresssoftware.app.blackduck.com/ - org variable!
 # API token in repo - https://github.com/chef/chef-vault/settings/secrets/actions
   generate-blackduck-sbom:
-    name: Generate SBOM using Blackduck Tool (BLUE)
+    name: Blackduck SCA Scan (PURPLE)
     runs-on: ubuntu-latest
     if: ${{ inputs.perform-blackduck-sca-scan == true || inputs.generate-blackduck-polaris-sbom == true }} # generate-blackduck--polaris-sbom is OBSOLETE, use perform-blackduck-sca-scan instead
     steps:
@@ -201,7 +201,7 @@ jobs:
           echo "BLACKDUCK_SBOM_URL: ${{ secrets.BLACKDUCK_SBOM_URL }}"
         # echo "BLACKDUCK_SBOM_API_KEY: ${{ secrets.BLACKDUCK_SBOM_API_KEY }}" no longer used, see BLACKDUCK_SCA_TOKEN
 
-      - name: BlackDuck SBOM scan
+      - name: BlackDuck SCA scan
         uses: blackduck-inc/black-duck-security-scan@v2.1.1
         continue-on-error: true  # Allow pipeline to continue even with policy violations
         env: 
