--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -213,7 +213,8 @@ jobs:
           blackducksca_url: ${{ secrets.BLACKDUCK_SBOM_URL }}  # BLACKDUCK_URL, should be https://progresssoftware.app.blackduck.com/ 
           blackducksca_token: ${{ secrets.BLACKDUCK_SCA_TOKEN }}  # was BLACKDUCK_API_KEY
           # blackducksca_scan_failure_severities: 'BLOCKER,CRITICAL'
-          detect_args: --detect.excluded.detector.types=PIP   # ignore python per https://documentation.blackduck.com/bundle/detect/page/packagemgrs/python.html
+          detect_args: "--detect.excluded.detector.types=PIP --detect.accuracy.required=NONE"
+        # ignore python per https://documentation.blackduck.com/bundle/detect/page/packagemgrs/python.html
 
 ######################################################
 # original from https://github.com/progress-platform-services/common-github-actions/blob/main/.github/workflows/examples/ci-all-sbom-main.yml
