--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -1300,7 +1300,7 @@ jobs:
     name: 'Generating SBOM'
     #    Create software bill-of-materials (SBOM) using SPDX format
     if: ${{ inputs.generate-sbom == true }}
-    uses: chef/common-github-actions/.github/workflows/sbom.yml@nikhil/create-lock-file-runtime
+    uses: chef/common-github-actions/.github/workflows/sbom.yml@main
     needs: ci-build
     secrets: inherit
     with:
