setting git config to install private gems
Signed-off-by: nikhil2611 <ngupta@progress.com>

--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -784,6 +784,11 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
+
+      - name: Configure git for private repositories
+        if: ${{ inputs.language == 'ruby' && inputs.build-profile == 'cli' }}
+        run: git config --global url."https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
+
       - name: 'Ruby build'
         if: ${{ inputs.language == 'ruby' && inputs.build-profile == 'cli' }}
         continue-on-error: true
