--- a/.github/workflows/cd-download-grype-scan.yml
+++ b/.github/workflows/cd-download-grype-scan.yml
@@ -321,13 +321,14 @@ jobs:
       - name: Run Grype scan on extracted directory
         timeout-minutes: 15 # Sets a 15-minute timeout for this specific step
         run: |
-          # run grype in runner
+          # run grype summary in runner
           grype dir:/tmp/extracted_packages --name ${{ inputs.product }} 
-          # run grype to output to file (which is uploaded to the job as an artifact)
+
+          # run full grype scan to output to file (which is uploaded to the job as an artifact)
           OUTPUT_FILE="${{ env.FILE_PREFIX }}.txt"
           OUTPUT_FILE="${OUTPUT_FILE//\//-}"
           echo $OUTPUT_FILE
-          grype dir:/tmp/extracted_packages --name ${{ inputs.product }} > $OUTPUT_FILE
+          grype dir:/tmp/extracted_packages -o json --name ${{ inputs.product }} > $OUTPUT_FILE
           echo "OUTPUT_FILE=$OUTPUT_FILE" >> $GITHUB_ENV
 
       - name: Upload Grype Scan Results
@@ -470,14 +471,14 @@ jobs:
           $ExtractPath = ".\bin"
           # $ExtractPath = "$env:TEMP\extracted_packages"
           
-          # run grype in runner
+          # run grype summary in runner
           grype dir:$ExtractPath --name ${{ inputs.product }}
           
-          # run grype to output to file (which is uploaded to the job as an artifact)
+          # run full grype scan to output to file (which is uploaded to the job as an artifact)
           $OutputFile = "${{ env.FILE_PREFIX }}.txt"
           $OutputFile = $OutputFile -replace '/', '-'
           Write-Host $OutputFile
-          grype dir:$ExtractPath --name ${{ inputs.product }} | Out-File -FilePath $OutputFile -Encoding utf8
+          grype dir:$ExtractPath -o json --name ${{ inputs.product }} | Out-File -FilePath $OutputFile -Encoding utf8
           echo "OUTPUT_FILE=$OutputFile" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
                 
       - name: Upload Grype Scan Results
